site: brand site with logo
Signed-off-by: Tyler Baker <tyler.baker@linaro.org>

--- a/simply_posted_portal/templates/homepage.html
+++ b/simply_posted_portal/templates/homepage.html
@@ -34,7 +34,7 @@ Built For <br>Real Estate Professionals{% endblocktrans %}</h1>
             </p>
             <div class="feature-columns">
                 <div>
-                    <img src='/site_media/static/content.png'>
+                    <img src='/site_media/static/content.png' height="186">
                     {% blocktrans %}
                     <h1>Engaging Content</h1> Our team posts engaging content related to the Mortgage & Real Estate industries so people start talking about your services.
                     {% endblocktrans %}
