--- a/simply_posted_portal/templates/site_base.html
+++ b/simply_posted_portal/templates/site_base.html
@@ -4,6 +4,9 @@
 {% load pinax_webanalytics_tags %}
 {% load i18n %}
 
+{% block head_title_base %}{% block head_title %}{% endblock %}{% endblock %}
+
+{% block site_brand %}<a class="navbar-brand" href="{% url "home" %}"><img src='/site_media/static/logo.png'></a>{% endblock %}
 
 {% block styles %}
     {% include "_styles.html" %}
