--- a/static/src/less/custom.less
+++ b/static/src/less/custom.less
@@ -1,5 +1,5 @@
 body {
-  padding-top: 50px;
+  padding-top: 60px;
   position: relative;
 }
 section {
@@ -14,7 +14,30 @@ footer {
 p.login-signup {
     margin-top: 20px;
 }
-
+.navbar-brand {
+  height: 70px;
+}
+.navbar-nav > li > a {
+    padding-top: 25px;
+}
+.navbar-text {
+  margin-top: 25px;
+}
+.navbar-default {
+  background-color: #184e88;
+  border-color: #e7e7e7;
+}
+.navbar-default .navbar-text {
+  color: #FFFFFF;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #FFFFFF;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #777;
+  background-color: transparent;
+}
 .feature-columns {
     .make-row();
 
