--- a/simply_posted_portal/templates/account/base.html
+++ b/simply_posted_portal/templates/account/base.html
@@ -11,6 +11,9 @@
         <a class="list-group-item account-settings" href="{% url "account_settings" %}">
             {% trans "Account" %}
         </a>
+        <a class="list-group-item voice-settings" href="{% url "voice_settings" %}">
+            {% trans "Voice" %}
+        </a>
         <a class="list-group-item account-password" href="{% url "account_password" %}">
             {% trans "Change password" %}
         </a>
