css: add account voice to listing group
Signed-off-by: Tyler Baker <tyler.baker@linaro.org>

--- a/simply_posted_portal/templates/account/base.html
+++ b/simply_posted_portal/templates/account/base.html
@@ -11,7 +11,7 @@
         <a class="list-group-item account-settings" href="{% url "account_settings" %}">
             {% trans "Account" %}
         </a>
-        <a class="list-group-item voice-settings" href="{% url "voice_settings" %}">
+        <a class="list-group-item account-voice" href="{% url "voice_settings" %}">
             {% trans "Voice" %}
         </a>
         <a class="list-group-item account-password" href="{% url "account_password" %}">
