--- a/simply_posted_portal/templates/account/voice.html
+++ b/simply_posted_portal/templates/account/voice.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load bootstrap %}
 
-{% block body_class %}account voice-settings{% endblock %}
+{% block body_class %}account account-voice{% endblock %}
 
 {% block head_title %}{% trans "Voice" %}{% endblock %}
 
