simply_posted_portal: add social profile view
Signed-off-by: Tyler Baker <tyler.baker@linaro.org>

--- a/simply_posted_portal/templates/account/base.html
+++ b/simply_posted_portal/templates/account/base.html
@@ -11,7 +11,7 @@
         <a class="list-group-item account-posting-schedule" href="{% url "account_settings" %}">
             {% trans "Posting Schedule" %}
         </a>
-        <a class="list-group-item account-social-profiles" href="{% url "voice_settings" %}">
+        <a class="list-group-item account-social-profiles" href="{% url "social_profiles_settings" %}">
             {% trans "Social Profiles" %}
         </a>
     </div>
