--- a/static/src/less/account.less
+++ b/static/src/less/account.less
@@ -1,5 +1,7 @@
 body.account-settings .account-settings,
 body.account-voice .account-voice,
+body.account-social-profiles .account-social-profiles,
+body.account-posting-schedule .account-posting-schedule,
 body.account-password .account-password,
 body.account-delete .account-delete {
     z-index: 2; // Place active items above their siblings for proper border styling
