--- a/static/src/less/site.less
+++ b/static/src/less/site.less
@@ -1,5 +1,6 @@
 @import "bootstrap";
 @import "font-awesome";
+@import "bootstrap-social.less";
 
 @font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
