--- a/simply_posted_portal/templates/account/base.html
+++ b/simply_posted_portal/templates/account/base.html
@@ -8,7 +8,7 @@
 <div class="panel panel-default">
     <div class="panel-heading"><strong>{% trans "Social" %}</strong></div>
     <div class="list-group">
-        <a class="list-group-item account-posting-schedule" href="{% url "account_settings" %}">
+        <a class="list-group-item account-posting-schedule" href="{% url "posting_schedule_settings" %}">
             {% trans "Posting Schedule" %}
         </a>
         <a class="list-group-item account-social-profiles" href="{% url "social_profiles_settings" %}">
