simply_posted_portal: add account animations
Signed-off-by: Tyler Baker <tyler.baker@linaro.org>

--- a/simply_posted_portal/templates/account/social.html
+++ b/simply_posted_portal/templates/account/social.html
@@ -9,8 +9,9 @@
 
 {% block body %}
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-5 animated animated-sm bounceInUp">
             <legend>{% trans "Social Profiles" %}</legend>
+            <h2><small>Manage your social media profiles</small></h2>
             <a class="btn btn-block btn-social btn-facebook">
                 <span class="fa fa-facebook"></span> Link your Facebook Account
             </a>
