--- a/static/src/less/site.less
+++ b/static/src/less/site.less
@@ -12,5 +12,8 @@
 // Pinax Stripe
 @import "pinax.stripe.less";
 
+// Calendar
+@import "calendar.less";
+
 // Site overrides
 @import "custom.less";
