--- a/simply_posted_portal/templates/account/base.html
+++ b/simply_posted_portal/templates/account/base.html
@@ -9,7 +9,7 @@
     <div class="panel-heading"><strong>{% trans "Social" %}</strong></div>
     <div class="list-group">
         <a class="list-group-item account-posting-schedule" href="{% url "calendar_current_month" %}">
-            {% trans "Posting Schedule" %}
+            {% trans "Calendar" %}
         </a>
         <a class="list-group-item account-social-profiles" href="{% url "social_profiles_settings" %}">
             {% trans "Social Profiles" %}
